parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    REAL
    SUBROUTINE

Grammar

Rule 0     S' -> ficheiro
Rule 1     ficheiro -> unidades
Rule 2     unidades -> unidades unidade
Rule 3     unidades -> unidade
Rule 4     unidade -> programa_principal
Rule 5     unidade -> funcao
Rule 6     programa_principal -> PROGRAM ID comandos END
Rule 7     funcao -> tipo FUNCTION ID LPAREN lista_ids RPAREN registo_func comandos END
Rule 8     registo_func -> <empty>
Rule 9     comandos -> comandos comando
Rule 10    comandos -> comando
Rule 11    comando -> comando_base
Rule 12    comando -> NUMBER comando_base
Rule 13    comando_base -> declaracao
Rule 14    comando_base -> atribuicao
Rule 15    comando_base -> print
Rule 16    comando_base -> read
Rule 17    comando_base -> if_then
Rule 18    comando_base -> if_then_else
Rule 19    comando_base -> goto
Rule 20    comando_base -> do_loop
Rule 21    comando_base -> continue_stmt
Rule 22    comando_base -> return_stmt
Rule 23    declaracao -> tipo lista_ids
Rule 24    tipo -> INTEGER
Rule 25    tipo -> LOGICAL
Rule 26    lista_ids -> lista_ids COMMA elemento_decl
Rule 27    lista_ids -> elemento_decl
Rule 28    elemento_decl -> ID
Rule 29    elemento_decl -> ID LPAREN NUMBER RPAREN
Rule 30    atribuicao -> alvo EQUALS expressao
Rule 31    alvo -> ID
Rule 32    alvo -> ID LPAREN lista_args RPAREN
Rule 33    read -> READ TIMES COMMA alvo
Rule 34    print -> PRINT TIMES COMMA lista_print
Rule 35    lista_print -> lista_print COMMA elemento_print
Rule 36    lista_print -> elemento_print
Rule 37    elemento_print -> STRING
Rule 38    elemento_print -> expressao
Rule 39    goto -> GOTO NUMBER
Rule 40    do_loop -> DO NUMBER ID EQUALS expressao COMMA expressao
Rule 41    if_then -> IF LPAREN expressao RPAREN THEN comandos ENDIF
Rule 42    if_then_else -> IF LPAREN expressao RPAREN THEN comandos ELSE comandos ENDIF
Rule 43    continue_stmt -> CONTINUE
Rule 44    return_stmt -> RETURN
Rule 45    expressao -> expressao PLUS expressao
Rule 46    expressao -> expressao MINUS expressao
Rule 47    expressao -> expressao TIMES expressao
Rule 48    expressao -> expressao DIVIDE expressao
Rule 49    expressao -> expressao LE expressao
Rule 50    expressao -> expressao EQ expressao
Rule 51    expressao -> expressao GT expressao
Rule 52    expressao -> expressao AND expressao
Rule 53    expressao -> LPAREN expressao RPAREN
Rule 54    expressao -> ID LPAREN lista_args RPAREN
Rule 55    lista_args -> lista_args COMMA expressao
Rule 56    lista_args -> expressao
Rule 57    expressao -> NUMBER
Rule 58    expressao -> ID
Rule 59    expressao -> TRUE
Rule 60    expressao -> FALSE

Terminals, with rules where they appear

AND                  : 52
COMMA                : 26 33 34 35 40 55
CONTINUE             : 43
DIVIDE               : 48
DO                   : 40
ELSE                 : 42
END                  : 6 7
ENDIF                : 41 42
EQ                   : 50
EQUALS               : 30 40
FALSE                : 60
FUNCTION             : 7
GOTO                 : 39
GT                   : 51
ID                   : 6 7 28 29 31 32 40 54 58
IF                   : 41 42
INTEGER              : 24
LE                   : 49
LOGICAL              : 25
LPAREN               : 7 29 32 41 42 53 54
MINUS                : 46
NUMBER               : 12 29 39 40 57
PLUS                 : 45
PRINT                : 34
PROGRAM              : 6
READ                 : 33
REAL                 : 
RETURN               : 44
RPAREN               : 7 29 32 41 42 53 54
STRING               : 37
SUBROUTINE           : 
THEN                 : 41 42
TIMES                : 33 34 47
TRUE                 : 59
error                : 

Nonterminals, with rules where they appear

alvo                 : 30 33
atribuicao           : 14
comando              : 9 10
comando_base         : 11 12
comandos             : 6 7 9 41 42 42
continue_stmt        : 21
declaracao           : 13
do_loop              : 20
elemento_decl        : 26 27
elemento_print       : 35 36
expressao            : 30 38 40 40 41 42 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 55 56
ficheiro             : 0
funcao               : 5
goto                 : 19
if_then              : 17
if_then_else         : 18
lista_args           : 32 54 55
lista_ids            : 7 23 26
lista_print          : 34 35
print                : 15
programa_principal   : 4
read                 : 16
registo_func         : 7
return_stmt          : 22
tipo                 : 7 23
unidade              : 2 3
unidades             : 1 2

Parsing method: LALR

state 0

    (0) S' -> . ficheiro
    (1) ficheiro -> . unidades
    (2) unidades -> . unidades unidade
    (3) unidades -> . unidade
    (4) unidade -> . programa_principal
    (5) unidade -> . funcao
    (6) programa_principal -> . PROGRAM ID comandos END
    (7) funcao -> . tipo FUNCTION ID LPAREN lista_ids RPAREN registo_func comandos END
    (24) tipo -> . INTEGER
    (25) tipo -> . LOGICAL

    PROGRAM         shift and go to state 6
    INTEGER         shift and go to state 8
    LOGICAL         shift and go to state 9

    ficheiro                       shift and go to state 1
    unidades                       shift and go to state 2
    unidade                        shift and go to state 3
    programa_principal             shift and go to state 4
    funcao                         shift and go to state 5
    tipo                           shift and go to state 7

state 1

    (0) S' -> ficheiro .



state 2

    (1) ficheiro -> unidades .
    (2) unidades -> unidades . unidade
    (4) unidade -> . programa_principal
    (5) unidade -> . funcao
    (6) programa_principal -> . PROGRAM ID comandos END
    (7) funcao -> . tipo FUNCTION ID LPAREN lista_ids RPAREN registo_func comandos END
    (24) tipo -> . INTEGER
    (25) tipo -> . LOGICAL

    $end            reduce using rule 1 (ficheiro -> unidades .)
    PROGRAM         shift and go to state 6
    INTEGER         shift and go to state 8
    LOGICAL         shift and go to state 9

    unidade                        shift and go to state 10
    programa_principal             shift and go to state 4
    funcao                         shift and go to state 5
    tipo                           shift and go to state 7

state 3

    (3) unidades -> unidade .

    PROGRAM         reduce using rule 3 (unidades -> unidade .)
    INTEGER         reduce using rule 3 (unidades -> unidade .)
    LOGICAL         reduce using rule 3 (unidades -> unidade .)
    $end            reduce using rule 3 (unidades -> unidade .)


state 4

    (4) unidade -> programa_principal .

    PROGRAM         reduce using rule 4 (unidade -> programa_principal .)
    INTEGER         reduce using rule 4 (unidade -> programa_principal .)
    LOGICAL         reduce using rule 4 (unidade -> programa_principal .)
    $end            reduce using rule 4 (unidade -> programa_principal .)


state 5

    (5) unidade -> funcao .

    PROGRAM         reduce using rule 5 (unidade -> funcao .)
    INTEGER         reduce using rule 5 (unidade -> funcao .)
    LOGICAL         reduce using rule 5 (unidade -> funcao .)
    $end            reduce using rule 5 (unidade -> funcao .)


state 6

    (6) programa_principal -> PROGRAM . ID comandos END

    ID              shift and go to state 11


state 7

    (7) funcao -> tipo . FUNCTION ID LPAREN lista_ids RPAREN registo_func comandos END

    FUNCTION        shift and go to state 12


state 8

    (24) tipo -> INTEGER .

    FUNCTION        reduce using rule 24 (tipo -> INTEGER .)
    ID              reduce using rule 24 (tipo -> INTEGER .)


state 9

    (25) tipo -> LOGICAL .

    FUNCTION        reduce using rule 25 (tipo -> LOGICAL .)
    ID              reduce using rule 25 (tipo -> LOGICAL .)


state 10

    (2) unidades -> unidades unidade .

    PROGRAM         reduce using rule 2 (unidades -> unidades unidade .)
    INTEGER         reduce using rule 2 (unidades -> unidades unidade .)
    LOGICAL         reduce using rule 2 (unidades -> unidades unidade .)
    $end            reduce using rule 2 (unidades -> unidades unidade .)


state 11

    (6) programa_principal -> PROGRAM ID . comandos END
    (9) comandos -> . comandos comando
    (10) comandos -> . comando
    (11) comando -> . comando_base
    (12) comando -> . NUMBER comando_base
    (13) comando_base -> . declaracao
    (14) comando_base -> . atribuicao
    (15) comando_base -> . print
    (16) comando_base -> . read
    (17) comando_base -> . if_then
    (18) comando_base -> . if_then_else
    (19) comando_base -> . goto
    (20) comando_base -> . do_loop
    (21) comando_base -> . continue_stmt
    (22) comando_base -> . return_stmt
    (23) declaracao -> . tipo lista_ids
    (30) atribuicao -> . alvo EQUALS expressao
    (34) print -> . PRINT TIMES COMMA lista_print
    (33) read -> . READ TIMES COMMA alvo
    (41) if_then -> . IF LPAREN expressao RPAREN THEN comandos ENDIF
    (42) if_then_else -> . IF LPAREN expressao RPAREN THEN comandos ELSE comandos ENDIF
    (39) goto -> . GOTO NUMBER
    (40) do_loop -> . DO NUMBER ID EQUALS expressao COMMA expressao
    (43) continue_stmt -> . CONTINUE
    (44) return_stmt -> . RETURN
    (24) tipo -> . INTEGER
    (25) tipo -> . LOGICAL
    (31) alvo -> . ID
    (32) alvo -> . ID LPAREN lista_args RPAREN

    NUMBER          shift and go to state 17
    PRINT           shift and go to state 30
    READ            shift and go to state 31
    IF              shift and go to state 32
    GOTO            shift and go to state 33
    DO              shift and go to state 34
    CONTINUE        shift and go to state 35
    RETURN          shift and go to state 36
    INTEGER         shift and go to state 8
    LOGICAL         shift and go to state 9
    ID              shift and go to state 13

    comandos                       shift and go to state 14
    comando                        shift and go to state 15
    comando_base                   shift and go to state 16
    declaracao                     shift and go to state 18
    atribuicao                     shift and go to state 19
    print                          shift and go to state 20
    read                           shift and go to state 21
    if_then                        shift and go to state 22
    if_then_else                   shift and go to state 23
    goto                           shift and go to state 24
    do_loop                        shift and go to state 25
    continue_stmt                  shift and go to state 26
    return_stmt                    shift and go to state 27
    tipo                           shift and go to state 28
    alvo                           shift and go to state 29

state 12

    (7) funcao -> tipo FUNCTION . ID LPAREN lista_ids RPAREN registo_func comandos END

    ID              shift and go to state 37


state 13

    (31) alvo -> ID .
    (32) alvo -> ID . LPAREN lista_args RPAREN

    EQUALS          reduce using rule 31 (alvo -> ID .)
    END             reduce using rule 31 (alvo -> ID .)
    NUMBER          reduce using rule 31 (alvo -> ID .)
    PRINT           reduce using rule 31 (alvo -> ID .)
    READ            reduce using rule 31 (alvo -> ID .)
    IF              reduce using rule 31 (alvo -> ID .)
    GOTO            reduce using rule 31 (alvo -> ID .)
    DO              reduce using rule 31 (alvo -> ID .)
    CONTINUE        reduce using rule 31 (alvo -> ID .)
    RETURN          reduce using rule 31 (alvo -> ID .)
    INTEGER         reduce using rule 31 (alvo -> ID .)
    LOGICAL         reduce using rule 31 (alvo -> ID .)
    ID              reduce using rule 31 (alvo -> ID .)
    ENDIF           reduce using rule 31 (alvo -> ID .)
    ELSE            reduce using rule 31 (alvo -> ID .)
    LPAREN          shift and go to state 38


state 14

    (6) programa_principal -> PROGRAM ID comandos . END
    (9) comandos -> comandos . comando
    (11) comando -> . comando_base
    (12) comando -> . NUMBER comando_base
    (13) comando_base -> . declaracao
    (14) comando_base -> . atribuicao
    (15) comando_base -> . print
    (16) comando_base -> . read
    (17) comando_base -> . if_then
    (18) comando_base -> . if_then_else
    (19) comando_base -> . goto
    (20) comando_base -> . do_loop
    (21) comando_base -> . continue_stmt
    (22) comando_base -> . return_stmt
    (23) declaracao -> . tipo lista_ids
    (30) atribuicao -> . alvo EQUALS expressao
    (34) print -> . PRINT TIMES COMMA lista_print
    (33) read -> . READ TIMES COMMA alvo
    (41) if_then -> . IF LPAREN expressao RPAREN THEN comandos ENDIF
    (42) if_then_else -> . IF LPAREN expressao RPAREN THEN comandos ELSE comandos ENDIF
    (39) goto -> . GOTO NUMBER
    (40) do_loop -> . DO NUMBER ID EQUALS expressao COMMA expressao
    (43) continue_stmt -> . CONTINUE
    (44) return_stmt -> . RETURN
    (24) tipo -> . INTEGER
    (25) tipo -> . LOGICAL
    (31) alvo -> . ID
    (32) alvo -> . ID LPAREN lista_args RPAREN

    END             shift and go to state 39
    NUMBER          shift and go to state 17
    PRINT           shift and go to state 30
    READ            shift and go to state 31
    IF              shift and go to state 32
    GOTO            shift and go to state 33
    DO              shift and go to state 34
    CONTINUE        shift and go to state 35
    RETURN          shift and go to state 36
    INTEGER         shift and go to state 8
    LOGICAL         shift and go to state 9
    ID              shift and go to state 13

    comando                        shift and go to state 40
    comando_base                   shift and go to state 16
    declaracao                     shift and go to state 18
    atribuicao                     shift and go to state 19
    print                          shift and go to state 20
    read                           shift and go to state 21
    if_then                        shift and go to state 22
    if_then_else                   shift and go to state 23
    goto                           shift and go to state 24
    do_loop                        shift and go to state 25
    continue_stmt                  shift and go to state 26
    return_stmt                    shift and go to state 27
    tipo                           shift and go to state 28
    alvo                           shift and go to state 29

state 15

    (10) comandos -> comando .

    END             reduce using rule 10 (comandos -> comando .)
    NUMBER          reduce using rule 10 (comandos -> comando .)
    PRINT           reduce using rule 10 (comandos -> comando .)
    READ            reduce using rule 10 (comandos -> comando .)
    IF              reduce using rule 10 (comandos -> comando .)
    GOTO            reduce using rule 10 (comandos -> comando .)
    DO              reduce using rule 10 (comandos -> comando .)
    CONTINUE        reduce using rule 10 (comandos -> comando .)
    RETURN          reduce using rule 10 (comandos -> comando .)
    INTEGER         reduce using rule 10 (comandos -> comando .)
    LOGICAL         reduce using rule 10 (comandos -> comando .)
    ID              reduce using rule 10 (comandos -> comando .)
    ENDIF           reduce using rule 10 (comandos -> comando .)
    ELSE            reduce using rule 10 (comandos -> comando .)


state 16

    (11) comando -> comando_base .

    END             reduce using rule 11 (comando -> comando_base .)
    NUMBER          reduce using rule 11 (comando -> comando_base .)
    PRINT           reduce using rule 11 (comando -> comando_base .)
    READ            reduce using rule 11 (comando -> comando_base .)
    IF              reduce using rule 11 (comando -> comando_base .)
    GOTO            reduce using rule 11 (comando -> comando_base .)
    DO              reduce using rule 11 (comando -> comando_base .)
    CONTINUE        reduce using rule 11 (comando -> comando_base .)
    RETURN          reduce using rule 11 (comando -> comando_base .)
    INTEGER         reduce using rule 11 (comando -> comando_base .)
    LOGICAL         reduce using rule 11 (comando -> comando_base .)
    ID              reduce using rule 11 (comando -> comando_base .)
    ENDIF           reduce using rule 11 (comando -> comando_base .)
    ELSE            reduce using rule 11 (comando -> comando_base .)


state 17

    (12) comando -> NUMBER . comando_base
    (13) comando_base -> . declaracao
    (14) comando_base -> . atribuicao
    (15) comando_base -> . print
    (16) comando_base -> . read
    (17) comando_base -> . if_then
    (18) comando_base -> . if_then_else
    (19) comando_base -> . goto
    (20) comando_base -> . do_loop
    (21) comando_base -> . continue_stmt
    (22) comando_base -> . return_stmt
    (23) declaracao -> . tipo lista_ids
    (30) atribuicao -> . alvo EQUALS expressao
    (34) print -> . PRINT TIMES COMMA lista_print
    (33) read -> . READ TIMES COMMA alvo
    (41) if_then -> . IF LPAREN expressao RPAREN THEN comandos ENDIF
    (42) if_then_else -> . IF LPAREN expressao RPAREN THEN comandos ELSE comandos ENDIF
    (39) goto -> . GOTO NUMBER
    (40) do_loop -> . DO NUMBER ID EQUALS expressao COMMA expressao
    (43) continue_stmt -> . CONTINUE
    (44) return_stmt -> . RETURN
    (24) tipo -> . INTEGER
    (25) tipo -> . LOGICAL
    (31) alvo -> . ID
    (32) alvo -> . ID LPAREN lista_args RPAREN

    PRINT           shift and go to state 30
    READ            shift and go to state 31
    IF              shift and go to state 32
    GOTO            shift and go to state 33
    DO              shift and go to state 34
    CONTINUE        shift and go to state 35
    RETURN          shift and go to state 36
    INTEGER         shift and go to state 8
    LOGICAL         shift and go to state 9
    ID              shift and go to state 13

    comando_base                   shift and go to state 41
    declaracao                     shift and go to state 18
    atribuicao                     shift and go to state 19
    print                          shift and go to state 20
    read                           shift and go to state 21
    if_then                        shift and go to state 22
    if_then_else                   shift and go to state 23
    goto                           shift and go to state 24
    do_loop                        shift and go to state 25
    continue_stmt                  shift and go to state 26
    return_stmt                    shift and go to state 27
    tipo                           shift and go to state 28
    alvo                           shift and go to state 29

state 18

    (13) comando_base -> declaracao .

    END             reduce using rule 13 (comando_base -> declaracao .)
    NUMBER          reduce using rule 13 (comando_base -> declaracao .)
    PRINT           reduce using rule 13 (comando_base -> declaracao .)
    READ            reduce using rule 13 (comando_base -> declaracao .)
    IF              reduce using rule 13 (comando_base -> declaracao .)
    GOTO            reduce using rule 13 (comando_base -> declaracao .)
    DO              reduce using rule 13 (comando_base -> declaracao .)
    CONTINUE        reduce using rule 13 (comando_base -> declaracao .)
    RETURN          reduce using rule 13 (comando_base -> declaracao .)
    INTEGER         reduce using rule 13 (comando_base -> declaracao .)
    LOGICAL         reduce using rule 13 (comando_base -> declaracao .)
    ID              reduce using rule 13 (comando_base -> declaracao .)
    ENDIF           reduce using rule 13 (comando_base -> declaracao .)
    ELSE            reduce using rule 13 (comando_base -> declaracao .)


state 19

    (14) comando_base -> atribuicao .

    END             reduce using rule 14 (comando_base -> atribuicao .)
    NUMBER          reduce using rule 14 (comando_base -> atribuicao .)
    PRINT           reduce using rule 14 (comando_base -> atribuicao .)
    READ            reduce using rule 14 (comando_base -> atribuicao .)
    IF              reduce using rule 14 (comando_base -> atribuicao .)
    GOTO            reduce using rule 14 (comando_base -> atribuicao .)
    DO              reduce using rule 14 (comando_base -> atribuicao .)
    CONTINUE        reduce using rule 14 (comando_base -> atribuicao .)
    RETURN          reduce using rule 14 (comando_base -> atribuicao .)
    INTEGER         reduce using rule 14 (comando_base -> atribuicao .)
    LOGICAL         reduce using rule 14 (comando_base -> atribuicao .)
    ID              reduce using rule 14 (comando_base -> atribuicao .)
    ENDIF           reduce using rule 14 (comando_base -> atribuicao .)
    ELSE            reduce using rule 14 (comando_base -> atribuicao .)


state 20

    (15) comando_base -> print .

    END             reduce using rule 15 (comando_base -> print .)
    NUMBER          reduce using rule 15 (comando_base -> print .)
    PRINT           reduce using rule 15 (comando_base -> print .)
    READ            reduce using rule 15 (comando_base -> print .)
    IF              reduce using rule 15 (comando_base -> print .)
    GOTO            reduce using rule 15 (comando_base -> print .)
    DO              reduce using rule 15 (comando_base -> print .)
    CONTINUE        reduce using rule 15 (comando_base -> print .)
    RETURN          reduce using rule 15 (comando_base -> print .)
    INTEGER         reduce using rule 15 (comando_base -> print .)
    LOGICAL         reduce using rule 15 (comando_base -> print .)
    ID              reduce using rule 15 (comando_base -> print .)
    ENDIF           reduce using rule 15 (comando_base -> print .)
    ELSE            reduce using rule 15 (comando_base -> print .)


state 21

    (16) comando_base -> read .

    END             reduce using rule 16 (comando_base -> read .)
    NUMBER          reduce using rule 16 (comando_base -> read .)
    PRINT           reduce using rule 16 (comando_base -> read .)
    READ            reduce using rule 16 (comando_base -> read .)
    IF              reduce using rule 16 (comando_base -> read .)
    GOTO            reduce using rule 16 (comando_base -> read .)
    DO              reduce using rule 16 (comando_base -> read .)
    CONTINUE        reduce using rule 16 (comando_base -> read .)
    RETURN          reduce using rule 16 (comando_base -> read .)
    INTEGER         reduce using rule 16 (comando_base -> read .)
    LOGICAL         reduce using rule 16 (comando_base -> read .)
    ID              reduce using rule 16 (comando_base -> read .)
    ENDIF           reduce using rule 16 (comando_base -> read .)
    ELSE            reduce using rule 16 (comando_base -> read .)


state 22

    (17) comando_base -> if_then .

    END             reduce using rule 17 (comando_base -> if_then .)
    NUMBER          reduce using rule 17 (comando_base -> if_then .)
    PRINT           reduce using rule 17 (comando_base -> if_then .)
    READ            reduce using rule 17 (comando_base -> if_then .)
    IF              reduce using rule 17 (comando_base -> if_then .)
    GOTO            reduce using rule 17 (comando_base -> if_then .)
    DO              reduce using rule 17 (comando_base -> if_then .)
    CONTINUE        reduce using rule 17 (comando_base -> if_then .)
    RETURN          reduce using rule 17 (comando_base -> if_then .)
    INTEGER         reduce using rule 17 (comando_base -> if_then .)
    LOGICAL         reduce using rule 17 (comando_base -> if_then .)
    ID              reduce using rule 17 (comando_base -> if_then .)
    ENDIF           reduce using rule 17 (comando_base -> if_then .)
    ELSE            reduce using rule 17 (comando_base -> if_then .)


state 23

    (18) comando_base -> if_then_else .

    END             reduce using rule 18 (comando_base -> if_then_else .)
    NUMBER          reduce using rule 18 (comando_base -> if_then_else .)
    PRINT           reduce using rule 18 (comando_base -> if_then_else .)
    READ            reduce using rule 18 (comando_base -> if_then_else .)
    IF              reduce using rule 18 (comando_base -> if_then_else .)
    GOTO            reduce using rule 18 (comando_base -> if_then_else .)
    DO              reduce using rule 18 (comando_base -> if_then_else .)
    CONTINUE        reduce using rule 18 (comando_base -> if_then_else .)
    RETURN          reduce using rule 18 (comando_base -> if_then_else .)
    INTEGER         reduce using rule 18 (comando_base -> if_then_else .)
    LOGICAL         reduce using rule 18 (comando_base -> if_then_else .)
    ID              reduce using rule 18 (comando_base -> if_then_else .)
    ENDIF           reduce using rule 18 (comando_base -> if_then_else .)
    ELSE            reduce using rule 18 (comando_base -> if_then_else .)


state 24

    (19) comando_base -> goto .

    END             reduce using rule 19 (comando_base -> goto .)
    NUMBER          reduce using rule 19 (comando_base -> goto .)
    PRINT           reduce using rule 19 (comando_base -> goto .)
    READ            reduce using rule 19 (comando_base -> goto .)
    IF              reduce using rule 19 (comando_base -> goto .)
    GOTO            reduce using rule 19 (comando_base -> goto .)
    DO              reduce using rule 19 (comando_base -> goto .)
    CONTINUE        reduce using rule 19 (comando_base -> goto .)
    RETURN          reduce using rule 19 (comando_base -> goto .)
    INTEGER         reduce using rule 19 (comando_base -> goto .)
    LOGICAL         reduce using rule 19 (comando_base -> goto .)
    ID              reduce using rule 19 (comando_base -> goto .)
    ENDIF           reduce using rule 19 (comando_base -> goto .)
    ELSE            reduce using rule 19 (comando_base -> goto .)


state 25

    (20) comando_base -> do_loop .

    END             reduce using rule 20 (comando_base -> do_loop .)
    NUMBER          reduce using rule 20 (comando_base -> do_loop .)
    PRINT           reduce using rule 20 (comando_base -> do_loop .)
    READ            reduce using rule 20 (comando_base -> do_loop .)
    IF              reduce using rule 20 (comando_base -> do_loop .)
    GOTO            reduce using rule 20 (comando_base -> do_loop .)
    DO              reduce using rule 20 (comando_base -> do_loop .)
    CONTINUE        reduce using rule 20 (comando_base -> do_loop .)
    RETURN          reduce using rule 20 (comando_base -> do_loop .)
    INTEGER         reduce using rule 20 (comando_base -> do_loop .)
    LOGICAL         reduce using rule 20 (comando_base -> do_loop .)
    ID              reduce using rule 20 (comando_base -> do_loop .)
    ENDIF           reduce using rule 20 (comando_base -> do_loop .)
    ELSE            reduce using rule 20 (comando_base -> do_loop .)


state 26

    (21) comando_base -> continue_stmt .

    END             reduce using rule 21 (comando_base -> continue_stmt .)
    NUMBER          reduce using rule 21 (comando_base -> continue_stmt .)
    PRINT           reduce using rule 21 (comando_base -> continue_stmt .)
    READ            reduce using rule 21 (comando_base -> continue_stmt .)
    IF              reduce using rule 21 (comando_base -> continue_stmt .)
    GOTO            reduce using rule 21 (comando_base -> continue_stmt .)
    DO              reduce using rule 21 (comando_base -> continue_stmt .)
    CONTINUE        reduce using rule 21 (comando_base -> continue_stmt .)
    RETURN          reduce using rule 21 (comando_base -> continue_stmt .)
    INTEGER         reduce using rule 21 (comando_base -> continue_stmt .)
    LOGICAL         reduce using rule 21 (comando_base -> continue_stmt .)
    ID              reduce using rule 21 (comando_base -> continue_stmt .)
    ENDIF           reduce using rule 21 (comando_base -> continue_stmt .)
    ELSE            reduce using rule 21 (comando_base -> continue_stmt .)


state 27

    (22) comando_base -> return_stmt .

    END             reduce using rule 22 (comando_base -> return_stmt .)
    NUMBER          reduce using rule 22 (comando_base -> return_stmt .)
    PRINT           reduce using rule 22 (comando_base -> return_stmt .)
    READ            reduce using rule 22 (comando_base -> return_stmt .)
    IF              reduce using rule 22 (comando_base -> return_stmt .)
    GOTO            reduce using rule 22 (comando_base -> return_stmt .)
    DO              reduce using rule 22 (comando_base -> return_stmt .)
    CONTINUE        reduce using rule 22 (comando_base -> return_stmt .)
    RETURN          reduce using rule 22 (comando_base -> return_stmt .)
    INTEGER         reduce using rule 22 (comando_base -> return_stmt .)
    LOGICAL         reduce using rule 22 (comando_base -> return_stmt .)
    ID              reduce using rule 22 (comando_base -> return_stmt .)
    ENDIF           reduce using rule 22 (comando_base -> return_stmt .)
    ELSE            reduce using rule 22 (comando_base -> return_stmt .)


state 28

    (23) declaracao -> tipo . lista_ids
    (26) lista_ids -> . lista_ids COMMA elemento_decl
    (27) lista_ids -> . elemento_decl
    (28) elemento_decl -> . ID
    (29) elemento_decl -> . ID LPAREN NUMBER RPAREN

    ID              shift and go to state 44

    lista_ids                      shift and go to state 42
    elemento_decl                  shift and go to state 43

state 29

    (30) atribuicao -> alvo . EQUALS expressao

    EQUALS          shift and go to state 45


state 30

    (34) print -> PRINT . TIMES COMMA lista_print

    TIMES           shift and go to state 46


state 31

    (33) read -> READ . TIMES COMMA alvo

    TIMES           shift and go to state 47


state 32

    (41) if_then -> IF . LPAREN expressao RPAREN THEN comandos ENDIF
    (42) if_then_else -> IF . LPAREN expressao RPAREN THEN comandos ELSE comandos ENDIF
